@@ -130,7 +130,8 @@ CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WORKQUEUE is not set
 CONFIG_SCHED_WAITPID=y
 # CONFIG_SCHED_ATEXIT is not set
-# CONFIG_SCHED_ONEXIT is not set
+CONFIG_SCHED_ONEXIT=y
+CONFIG_SCHED_ONEXIT_MAX=1
 CONFIG_USER_ENTRYPOINT="nsh_main"
 CONFIG_DISABLE_OS_API=y
 # CONFIG_DISABLE_CLOCK is not set
@@ -259,7 +260,8 @@ CONFIG_MM_REGIONS=1
 # Binary Formats
 #
 # CONFIG_BINFMT_DISABLE is not set
-# CONFIG_BINFMT_EXEPATH is not set
+CONFIG_BINFMT_EXEPATH=y
+CONFIG_PATH_INITIAL="/bin"
 # CONFIG_NXFLAT is not set
 # CONFIG_ELF is not set
 CONFIG_BUILTIN=y
@@ -284,7 +286,10 @@ CONFIG_LIB_HOMEDIR="/"
 # CONFIG_EOL_IS_LF is not set
 # CONFIG_EOL_IS_BOTH_CRLF is not set
 CONFIG_EOL_IS_EITHER_CRLF=y
-# CONFIG_LIBC_EXECFUNCS is not set
+CONFIG_LIBC_EXECFUNCS=y
+CONFIG_EXECFUNCS_SYMTAB="g_symtab"
+CONFIG_EXECFUNCS_NSYMBOLS=0
+CONFIG_POSIX_SPAWN_STACKSIZE=1024
 # CONFIG_LIBC_STRERROR is not set
 # CONFIG_LIBC_PERROR_STDOUT is not set
 CONFIG_ARCH_LOWPUTC=y
@@ -410,6 +415,7 @@ CONFIG_EXAMPLES_NSH=y
 #
 CONFIG_NSH_LIBRARY=y
 CONFIG_NSH_BUILTIN_APPS=y
+CONFIG_NSH_FILE_APPS=y
 
 #
 # Disable Individual commands
